$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.18-5 (opened May 21, 2010) 

	* cca, rda: plot() failed if Condition() had factors, but
	constraints had no factors. An example of failure:

	m <- cca(dune ~ A1 + Condition(Management), dune.env)
	plot(m) ## failed

	* ordiarrows: gained 'label' argument which uses ordilabel() on
	arrow starts.

	* ordispider: gained 'label' argument (uses ordilabel()). Can now
	handle ordihull() result objects: connects points in the line to
	the hull centroid. Extended examples.
	
	* ordiR2step: new function to perform forward model selection
	following Blanchet, Legendre & Borcard (Ecology 89, 2623-2632;
	2008) or by adjusted R2 until the adjusted R2 of the full model
	(scope) is exceeded or adjusted R2 starts to decrease.

	* RsquareAdj.default: handles vector arguments.

	* ordiellipse: works only with 2D data, and now uses only first
	two dimensions of input if more given. For instance, the following
	works now, but gave very cryptic error message previously:

	m <- decorana(dune)
	plot(m)
	with(dune.env, ordiellipse(m, Management))

	* ordiresids: removes now the row weights from Residuals and
	Fitted in CA. Now shows the same values that are shuffled or
	resampled in simulate.cca() where they are again weighted after
	being added to the new fitted value.

	* mantel.correlog: changes the Sturges rule to conform with the
	standard R nclass.Sturges ('ceiling' instead of 'round'). Extends
	and corrects documentation and messages.

Version 1.18-4 (closed May 21, 2010)

	* envfit: defaults now to 999 permutations. Used to be 0 or no
	permutations. 

	* metaMDS: can handle NA values in dissimilarities (but I do not
	know if isoMDS can handle them correctly).

	* mantel.correlog: accepts now user supplied breakpoints or number
	of classes like intended.

	* RsquareAdj.rda: uses now correct model df in rank deficit RDA
	models. 

	* adonis: implemented tie handling in permutations. 
